--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -20,4 +20,6 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry"
+    compile "org.springframework.cloud:spring-cloud-starter-netflix-hystrix:$springCloudCommonsVersion"
+
 }
